
syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

package ocp.project.api;

option go_package = "gihtub.com/ozoncp/ocp-project-api/pkg/ocp-project-api;ocp_project_api";

// Описание задачи

service OcpProjectApi {

  // Return projects list
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {
    option (google.api.http) = {
      get: "/projects/list/{limit}"
    };
  }

  // Return projects description by it id
  rpc DescribeProject(DescribeProjectRequest) returns (DescribeProjectResponse) {
    option (google.api.http) = {
      get: "/projects/{project_id}"
    };
  }

  // Create new project
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {
    option (google.api.http) = {
      post: "/projects"
    };
  }

  // Create new projects
  rpc MultiCreateProject(MultiCreateProjectRequest) returns (MultiCreateProjectResponse) {
    option (google.api.http) = {
      post: "/projects"
    };
  }

  // Remove project by id
  rpc RemoveProject(RemoveProjectRequest) returns (RemoveProjectResponse) {
    option (google.api.http) = {
      delete: "/projects/{project_id}"
    };
  }
}

message ListProjectsRequest {
  uint64 limit = 1;
  uint64 offset = 2;
}

message ListProjectsResponse {
  repeated Project projects = 1;
}

message CreateProjectRequest {
  uint64 course_id = 1 [(validate.rules).uint64.gt = 0];
  string name = 2;
}

message CreateProjectResponse {
  uint64 project_id = 1;
}

message MultiCreateProjectRequest {
  repeated NewProject projects = 1;
}

message MultiCreateProjectResponse {
  int64 count_of_created = 1;
}

message RemoveProjectRequest {
  uint64 project_id = 1 [(validate.rules).uint64.gt = 0];
}

message RemoveProjectResponse {
  bool found = 1;
}

message DescribeProjectRequest {
  uint64 project_id = 1 [(validate.rules).uint64.gt = 0];
}

message DescribeProjectResponse {
  Project project = 1;
}

// Project description
message Project {
  uint64 id = 1;
  uint64 course_id = 2;
  string name = 3;
}

// Project description for multi creation
message NewProject {
  uint64 course_id = 1 [(validate.rules).uint64.gt = 0];
  string name = 2;
}